--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ plugins {
 
 group 'io.github.jinlongliao'
 version '1.0-SNAPSHOT'
-
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 repositories {
     mavenCentral()
 }
