--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,8 +20,8 @@
     <actions>
         <!-- Add your actions here -->
         <!--    设置 idea Action    -->
-        <action id="ldx.patcher" class="com.CreatePatcherAction" text="Create Patcher"
-                description="Create Java SE and Java EE project patch files.">
+        <action id="ldx.patcher" class="io.github.jinlongliao.patcher2.CreatePatcherAction" text="Create Patcher"
+                description="Create Java,Groovy,Kotlin patch files.">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
             <add-to-group group-id="Vcs.Log.ChangesBrowser.Popup" anchor="first"/><!-- Version Control-Log  -->
             <add-to-group group-id="ChangesViewPopupMenu" anchor="first"/>      <!-- Version Control-Local Change  -->
